set up postcss, language and fonts

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mikud-peo",
   "type": "module",
   "version": "0.0.1",
+  "browserslist": [
+    "defaults"
+  ],
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -10,6 +13,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.8"
+    "astro": "^2.1.8",
+    "postcss": "^8.4.21",
+    "postcss-preset-env": "^8.2.0"
   }
 }
