--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "astro": "^2.1.8",
+    "astro-icon": "^0.8.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.2.0"
   }
