--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.1.8",
+    "@astrojs/tailwind": "^3.1.1",
+    "astro": "^2.1.9",
     "astro-icon": "^0.8.0",
     "postcss": "^8.4.21",
-    "postcss-preset-env": "^8.2.0"
+    "postcss-preset-env": "^8.2.0",
+    "tailwindcss": "^3.3.1"
   }
 }
