--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.1",
+    "@fontsource/rubik": "^4.5.14",
     "astro": "^2.1.9",
     "astro-icon": "^0.8.0",
     "postcss": "^8.4.21",
