--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.4",
     "@astrojs/tailwind": "^3.1.1",
     "@fontsource/rubik": "^4.5.14",
     "astro": "^2.1.9",
     "astro-icon": "^0.8.0",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^8.2.0",
+    "sharp": "^0.31.3",
     "tailwindcss": "^3.3.1"
   }
 }
