--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "preact": "^10.13.2",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.3.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
