--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9"
   }
 }
